Re-layout Chrome OS audio row when headphone connected

Whenever visibility of device type icon in the audio row of system menu
changes, layout needs to be invalidated so that the row is re-layed out.

BUG=680171
TEST=manual

Review-Url: https://codereview.chromium.org/2671593003
Cr-Commit-Position: refs/heads/master@{#447879}

Former-commit-id: 74921d58b53f2333e9a3c921ecb87ca65721a902